--- a/style.css
+++ b/style.css
@@ -4,14 +4,28 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f8fcfa;
-  color: #050a08;
+  color: #ffffff;
 }
 
 header {
   background-color: #32cd75;
   color: #050a08;
   padding: 15px;
-  text-align: center;
+  display: flex;  /* Flexbox aktiviert */
+  align-items: center;  /* Vertikal zentrieren */
+  justify-content: space-between;  /* Sorgt für Abstand zwischen Logo und Überschrift */
+}
+
+header .logo {
+  width: 100px; /* Logo-Breite */
+  height: 50px; /* Logo-Höhe */
+}
+
+header h1 {
+  font-size: 1.5em;
+  margin: 0;
+  flex-grow: 1;  /* Der Text wächst, um den verfügbaren Platz auszufüllen */
+  text-align: center;  /* Text zentrieren */
 }
 
 nav {
@@ -55,13 +69,41 @@ h2 {
 }
 
 footer {
-  background-color: #32cd75;
-  color: #050a08;
+  background-color: #333;
+  color: white;
+  padding: 20px;
   text-align: center;
-  padding: 10px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+footer p {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+footer nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer nav ul li {
+  display: inline;
+  margin: 0 10px;
+}
+
+footer nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+footer .social-media a {
+  color: white;
+  margin: 0 10px;
+  text-decoration: none;
 }
 
 img {
