--- a/style.css
+++ b/style.css
@@ -122,3 +122,9 @@ img {
   background-position: center;
   z-index: -1; /* Lässt das Bild im Hintergrund */
 }
+
+.logo {
+  width: 80px;
+  height: auto;
+  border-radius: 50%;
+}
