--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f8fcfa;
-  color: #707070;
+  color: #ffffff;
 }
 
 header {
@@ -57,8 +57,16 @@ section {
 }
 
 h2 {
-  color: #050a08;
+  color: rgb(0, 0, 0);
+  background-color: #8eecb6;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: fit-content;
+  margin: 20px 0;
 }
+
 
 .recipe {
   background-color: #4eef93;
@@ -96,7 +104,7 @@ footer nav ul li {
 }
 
 footer nav ul li a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
