--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-/* style.css */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f8fcfa;
   color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -50,6 +52,7 @@ nav ul li a {
 
 main {
   padding: 20px;
+  flex: 1;
 }
 
 section {
@@ -66,7 +69,6 @@ h2 {
   width: fit-content;
   margin: 20px 0;
 }
-
 
 .recipe {
   background-color: #4eef93;
