--- a/style.css
+++ b/style.css
@@ -78,6 +78,12 @@ h2 {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.recipe-img {
+  width: 300px;
+  height: auto; 
+}
+
+
 footer {
   background-color: #333;
   color: white;
