--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f8fcfa;
-  color: #ffffff;
+  color: #000;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -13,21 +13,21 @@ header {
   background-color: #32cd75;
   color: #050a08;
   padding: 15px;
-  display: flex; 
-  align-items: center; 
-  justify-content: space-between;  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header .logo {
   width: 100px;
-  height: 50px; 
+  height: 50px;
 }
 
 header h1 {
   font-size: 1.5em;
   margin: 0;
-  flex-grow: 1;  
-  text-align: center;  
+  flex-grow: 1;
+  text-align: center;
 }
 
 nav {
@@ -38,6 +38,7 @@ nav {
 nav ul {
   list-style: none;
   text-align: center;
+  padding: 0;
 }
 
 nav ul li {
@@ -67,22 +68,30 @@ h2 {
   text-align: left;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: fit-content;
-  margin: 20px 0;
+  margin-bottom: 10px;
 }
 
-.recipe {
+.recipe-container {
+  display: flex;
+  align-items: flex-start; /* Bild und Text oben ausrichten */
   background-color: #4eef93;
   padding: 15px;
-  margin-bottom: 15px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  max-width: 800px; /* Begrenzte Breite für bessere Darstellung */
 }
 
 .recipe-img {
   width: 300px;
-  height: auto; 
+  height: auto;
+  margin-right: 15px; /* Abstand zwischen Bild und Text */
+  border-radius: 10px;
 }
 
+.recipe-text {
+  flex: 1;
+  color: #000;
+}
 
 footer {
   background-color: #333;
@@ -112,7 +121,7 @@ footer nav ul li {
 }
 
 footer nav ul li a {
-  color: rgb(0, 0, 0);
+  color: white;
   text-decoration: none;
 }
 
@@ -122,17 +131,12 @@ footer .social-media a {
   text-decoration: none;
 }
 
-img {
-  display: block;
-  margin: 0 auto;
-}
-
 .fullscreen-bg {
-  position: fixed; 
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh; 
+  height: 100vh;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("startbild.jpg");
   background-size: cover;
   background-position: center;
